GNOME Bugzilla – Bug 726327
python: Name the GC timeout
Last modified: 2014-03-14 15:31:30 UTC
.
Created attachment 271869 [details] [review] python: Name the GC timeout So that it can show up with its own name in profiling outputs.
Review of attachment 271869 [details] [review]: Looks good.
Attachment 271869 [details] pushed as 2680b37 - python: Name the GC timeout
Umm... can fix the coding style to follow the rest of the file? thanks!
(In reply to comment #4) > Umm... can fix the coding style to follow the rest of the file? thanks! Would be great if this got flagged up during review. Otherwise I might as well push directly :)
Review of attachment 271869 [details] [review]: Sorry guys, I did not realized about the coding style issue...