python: Name the GC timeout

So that it can show up with its own name in profiling outputs.

https://bugzilla.gnome.org/show_bug.cgi?id=726327